<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="new_crime_menu">New Crime</string>
    <string name="delete_crime_menu">Delete Crime</string>
    <string name="delete_all_crimes_menu">Delete All Crimes</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="empty_list_label">The list of crimes is empty, add a new one.</string>
    <string name="crime_suspect_label">Choose Suspect</string>
    <string name="crime_sendReport_label">Send Crime Report</string>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="desc_crime_image">Crime Image</string>
    <string name="desc_set_crime_image">Set Crime Image</string>
    <string name="desc_crime_save">SaveCrime</string>
</resources>